--- a/p2-proj.css
+++ b/p2-proj.css
@@ -74,8 +74,9 @@
 }
 .p-proj-container2 {
   display: flex;
+  margin-top: 0px;
   align-items: flex-start;
-  margin-left: var(--dl-space-space-halfunit);
+  margin-left: 4px;
   flex-direction: column;
   justify-content: flex-start;
 }
@@ -162,8 +163,9 @@
 }
 .p-proj-container4 {
   display: grid;
+  margin-top: 0px;
   align-items: flex-start;
-  margin-left: var(--dl-space-space-halfunit);
+  margin-left: 4px;
   flex-direction: column;
   justify-content: flex-start;
 }
@@ -216,8 +218,9 @@
 .p-proj-a12qs-bug {
   display: grid;
   position: relative;
+  margin-top: 0px;
   align-items: flex-start;
-  margin-left: var(--dl-space-space-halfunit);
+  margin-left: 4px;
   flex-direction: column;
   justify-content: flex-start;
 }
@@ -243,7 +246,7 @@
 .p-proj-miui-el13repack {
   display: grid;
   align-items: flex-start;
-  margin-left: var(--dl-space-space-halfunit);
+  margin-left: 4px;
   flex-direction: column;
   justify-content: flex-start;
 }
@@ -279,7 +282,7 @@
 .p-proj-navlink {
   width: 222px;
   margin-top: -5px;
-  margin-left: var(--dl-space-space-halfunit);
+  margin-left: 4px;
   text-decoration: none;
 }
 .p-proj-dalshe {
@@ -297,8 +300,9 @@
 }
 .p-proj-container6 {
   display: flex;
+  margin-top: 0px;
   align-items: flex-start;
-  margin-left: var(--dl-space-space-halfunit);
+  margin-left: 4px;
   flex-direction: column;
   justify-content: flex-start;
 }
@@ -306,112 +310,7 @@
   font-weight: 600;
   margin-bottom: var(--dl-space-space-unit);
 }
-@media(max-width: 1600px) {
-  .p-proj-container {
-    align-items: flex-start;
-    flex-direction: row;
-    justify-content: center;
-  }
-  .p-proj-sidebar {
-    width: var(--dl-size-size-xlarge);
-    align-self: stretch;
-  }
-  .p-proj-text01 {
-    font-family: Inter;
-  }
-  .p-proj-features {
-    width: 100%;
-    max-width: 100%;
-    align-self: flex-start;
-  }
-  .p-proj-windows {
-    padding: 0px;
-  }
-  .p-proj-image {
-    width: 25px;
-  }
-  .p-proj-container2 {
-    margin-left: var(--dl-space-space-halfunit);
-  }
-  .p-proj-heading {
-    font-family: Open Sans;
-    font-weight: 600;
-  }
-  .p-proj-text04 {
-    line-height: 1.25;
-  }
-  .p-proj-second-column {
-    padding: 0px;
-  }
-  .p-proj-cursors {
-    padding: 0px;
-  }
-  .p-proj-image1 {
-    width: 25px;
-  }
-  .p-proj-container4 {
-    margin-left: var(--dl-space-space-halfunit);
-  }
-  .p-proj-text10 {
-    font-family: Open Sans;
-    font-weight: 600;
-  }
-  .p-proj-text11 {
-    line-height: 1.25;
-  }
-  .p-proj-container5 {
-    margin-left: 0px;
-  }
-  .p-proj-button09 {
-    width: 96px;
-    margin-left: -40px;
-  }
-  .p-proj-mido {
-    padding: 0px;
-  }
-  .p-proj-image3 {
-    width: 25px;
-  }
-  .p-proj-a12qs-bug {
-    margin-left: var(--dl-space-space-halfunit);
-  }
-  .p-proj-text16 {
-    font-family: Open Sans;
-    font-weight: 600;
-  }
-  .p-proj-text17 {
-    line-height: 1.25;
-  }
-  .p-proj-miui-el13repack {
-    margin-left: var(--dl-space-space-halfunit);
-  }
-  .p-proj-third-column {
-    padding: 0px;
-  }
-  .p-proj-this-site {
-    padding: 0px;
-  }
-  .p-proj-image4 {
-    width: 25px;
-  }
-  .p-proj-dalshe {
-    padding: 0px;
-  }
-  .p-proj-image5 {
-    width: 25px;
-  }
-  .p-proj-container6 {
-    margin-left: var(--dl-space-space-halfunit);
-  }
-  .p-proj-text21 {
-    font-family: Open Sans;
-  }
-  .p-proj-text22 {
-    font-size: 16px;
-    line-height: 1.15;
-  }
-}
-@media(max-width: 1200px) {
+@media(max-width: 1366px) {
   .p-proj-container {
     align-items: flex-start;
     flex-direction: row;
@@ -453,77 +352,7 @@
     margin-bottom: var(--dl-space-space-twounits);
   }
 }
-@media(max-width: 991px) {
-  .p-proj-sidebar {
-    flex: 1;
-    width: var(--dl-size-size-xlarge);
-    height: auto;
-  }
-  .p-proj-rn4 {
-    margin-right: 0px;
-  }
-}
-@media(max-width: 767px) {
-  .p-proj-sidebar {
-    flex: 1;
-    width: var(--dl-size-size-xlarge);
-    height: auto;
-  }
-  .p-proj-features {
-    padding-left: var(--dl-space-space-twounits);
-    padding-right: var(--dl-space-space-twounits);
-  }
-  .p-proj-container1 {
-    grid-template-columns: 1fr;
-  }
-  .p-proj-windows {
-    flex-direction: row;
-  }
-  .p-proj-container2 {
-    flex-direction: column;
-  }
-  .p-proj-second-column {
-    flex-direction: row;
-  }
-  .p-proj-cursors {
-    flex-direction: row;
-  }
-  .p-proj-container4 {
-    flex-direction: column;
-  }
-  .p-proj-container5 {
-    flex-direction: column;
-  }
-  .p-proj-mido {
-    flex-direction: row;
-  }
-  .p-proj-a12qs-bug {
-    flex-direction: column;
-  }
-  .p-proj-text16 {
-    font-family: Open Sans;
-    font-weight: 600;
-  }
-  .p-proj-text17 {
-    line-height: 1.25;
-  }
-  .p-proj-miui-el13repack {
-    flex-direction: column;
-  }
-  .p-proj-third-column {
-    flex-direction: row;
-  }
-  .p-proj-this-site {
-    flex-direction: row;
-  }
-  .p-proj-dalshe {
-    flex-direction: row;
-  }
-  .p-proj-container6 {
-    flex-direction: column;
-  }
-}
-@media(max-width: 479px) {
+@media(max-width: 480px) {
   .p-proj-sidebar {
     flex: 1;
     width: var(--dl-size-size-xlarge);
